Dark mode fixit: elements/computedStyleWidgetTree.css
This CL also redirects the legacy --divider-color to
--color-details-hairline.

Bug: chromium:1152736

--- a/front_end/ui/inspectorCommon.css
+++ b/front_end/ui/inspectorCommon.css
@@ -38,8 +38,7 @@
   --selection-inactive-bg-color: #dadada;
   --tab-selected-fg-color: #333;
   --tab-selected-bg-color: var(--toolbar-bg-color);
-  --divider-color: var(--color-details-hairline);
-  --divider-border: 1px solid var(--divider-color);
+  --divider-border: 1px solid var(--color-details-hairline);
   --focus-ring-inactive-shadow: 0 0 0 1px var(--focus-ring-inactive-shadow-color);
   --focus-ring-active-shadow: 0 0 0 1px var(--accent-color);
   --item-selection-bg-color: #cfe8fc;
@@ -85,7 +84,6 @@
   --selection-inactive-bg-color: hsl(0deg 0% 28%);
   --tab-selected-fg-color: #eaeaea;
   --tab-selected-bg-color: #000;
-  --divider-color: #525252;
   --focus-ring-inactive-shadow: 0 0 0 1px var(--focus-ring-inactive-shadow-color);
   --item-selection-bg-color: hsl(207deg 88% 22%);
   --item-selection-inactive-bg-color: #454545;
